# Group16

./: CDA3130-Project3 Analytics.xlsx  ParseCSV.cpp  ParseCSV.h  README.md  mainwindow.cpp  prefix.cpp  prefix.h
src/: main.cpp  mainwindow.cpp  prefix.cpp  prefix.h
src/How_Long_To_Beat/: CMakeLists.txt  ParseCSV.cpp  game.cpp  game.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  skipList.cpp  skipList.h
